# g3xtools

./: .gitignore  .pre-commit-config.yaml  README  README.md  cache.py  featunlk.py  fpl.py  g3xchecklist.py  g3xdata.py  g3xdevice.py  g3xfplan.py  g3xheaders.py  g3xlog.py  g3xtext.py  garmin_api.py  garmin_device.py  garmin_login.py  makedb.py  nasr.py  nasr2sqlite.py  nasr_initialize.sql  neighbors.py  plan.py  post_process_nasr.sql  pyproject.toml  requirements.txt  sdcard.py  taw.py  vsn.py
flygarmin/: index.html  sso.js
tests/: __init__.py  check-all.sh  conftest.py  create_test_fixtures.py  lint.sh  test_featunlk.py  test_fpl.py  test_g3xchecklist.py  test_g3xdata.py  test_g3xdevice.py  test_g3xfplan.py  test_g3xheaders.py  test_g3xlog.py  test_g3xtext.py  test_garmin_api.py  test_garmin_device.py  test_nasr.py  test_sdcard.py  test_taw.py
tests/fixtures/: invalid.yaml  invalid_crc.ace  invalid_route.fpl  minimal.ace  minimal.yaml  nasr_test.msgpack  simple_route.fpl  truncated.ace  user_waypoint.fpl
tests/integration/: __init__.py
